Fixed the process execution